# Bluestrike

./: README.md  main.py  pyproject.toml
bluestrike/: main.py
bluestrike/utils/: kick.py  logo.py  scanner.py
utils/: kick.py  scanner.py
